overlays/production/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: production.app.127-0-0-1.nip.io  
    http:
      paths:
      - path: /
        backend:
          serviceName: production-java-hello-world-svc
          servicePort: 8080
